# wxTestCross

./: .gitmodules  CMakeLists.txt  cmain.cpp  cmain.h  myapp.cpp  myapp.h
